# mc-launcher

./: .gitignore  FINAL_SUMMARY.md  IMPROVEMENTS.md  LOGGING_GUIDE.md  README.md  SIMPLE_API.md  account.json  index.js  launch-nw.sh  launcher-settings.json  launcher-wrapper.js  package.json  real-auth.js
Launcher/: Launch.js
Launcher/Authenticator/GUI/: Electron.js
Launcher/Minecraft-Loader/: index.js  patcher.d.ts  patcher.js
Launcher/utils/: unzipper.js
custom-mod/: build.gradle  gradle.properties
examples/: basic-launch.js  direct-kill-demo.js  event-logging-example.js  get-logs.js  kill-mc.js  quiet-launch.js  simple-api.js  test-features.js  test-new-features.js
mc-launcher-tauri/: index.html  main.js  package.json  styles.css  vite.config.js
mc-launcher-tauri/launcher-lib/: Cargo.toml  README.md
mc-launcher-tauri/launcher-lib/examples/: auth_example.rs  basic_launch.rs  download_example.rs  mod_loader_example.rs
mc-launcher-tauri/launcher-lib/src/: auth.rs  config.rs  downloader.rs  error.rs  java.rs  launcher.rs  lib.rs  minecraft.rs  utils.rs  version.rs
mc-launcher-tauri/src-tauri/: Cargo.toml  tauri.conf.json
mc-launcher-tauri/src-tauri/capabilities/: default.json
mc-launcher-tauri/src-tauri/src/: launcher.rs  lib.rs  main.rs
nw-launcher/: README.md  index.html  package.json  renderer.js  settings.js  styles.css
nw-launcher/Launcher/: utils.js
nw-launcher/Launcher/Authenticator/: Microsoft.js
nw-launcher/Launcher/Minecraft-Loader/: index.d.ts  index.js.map  patcher.js.map
nw-launcher/Launcher/utils/: Downloader.js  Index.js
(+43 files in other folders)
